homelab/apps/arr/qui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qui
  namespace: arr
  labels:
    app: qui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qui
  template:
    metadata:
      labels:
        app: qui
    spec:
      containers:
        - name: qui
          image: ghcr.io/hotio/qui:release-1.4.0
          ports:
            - containerPort: 7476
              protocol: TCP
              name: webui
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: qui-config-pvc
      restartPolicy: Always
