homelab/apps/arr/qui/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qui
  namespace: arr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qui.dominikstahl.dev`)
      kind: Rule
      services:
        - name: qui
          port: webui
